<resources>
    <string name="app_name">KrowdTrialz</string>
    <string name="title_subscribed">Subscribed</string>
    <string name="title_publish">Publish</string>
    <string name="title_owner">Owner</string>
    <string name="title_contributors">Contributors</string>
    <string name="ignore_contributors">Ignore</string>
    <string name="add_experiment_name_prompt">Add experiment name</string>
    <string name="add_experiment_description_prompt">Add a description</string>
    <string name="geo_location_toggle">Geolocation required</string>
    <string name="owner_username">Owner Username</string>
    <string name="description_non_owner_text">Description</string>
    <string name="status">Status</string>
    <string name="region_non_owner">Region</string>
    <string name="subscribe_non_owner">Subscribe</string>
    <string name="add_trials_non_owner">ADD Trials</string>
    <string name="_1_23_non_owner">1.23</string>
    <string name="_0_98_non_owner">0.98</string>
    <string name="mean_non_owner">Mean</string>
    <string name="stdev_non_owner">stdev</string>
    <string name="q1_non_owner">1st Quartile</string>
    <string name="q2_non_owner">2nd Quartile</string>
    <string name="q3_non_owner">3rd Quartile</string>
    <string name="q4_non_owner">4th Quartile</string>
    <string name="median_non_owner">median</string>
    <string name="view_map_non_owner">view map</string>
    <string name="view_q_amp_a_non_owner"><![CDATA[view Q&A]]></string>
    <string name="description_owner">Description</string>
    <string name="region_owner">Region</string>
    <string name="minimum_trials_owner">Minimum trials:</string>
    <string name="enter_a_number_owner">Enter a number</string>
    <string name="end_experiment_owner">End Experiment</string>
    <string name="unpublish_owner">Unpublish</string>
    <string name="view_contributors_owner">View Contributors</string>
    <string name="subscribe_owner">Subscribe</string>
    <string name="add_trials_owner">Add trials</string>
    <string name="mean_owner">mean</string>
    <string name="stdev_owner">stdev</string>
    <string name="q0_owner">q0</string>
    <string name="q1_owner">q1</string>
    <string name="q2_owner">q2</string>
    <string name="q3_owner">q3</string>
    <string name="q4_owner">q4</string>
    <string name="median_owner">median</string>
    <string name="view_map_owner">view map</string>
    <string name="view_q_amp_a_owner"><![CDATA[View Q&A]]></string>
    <string name="subscribed_experiments_title">Subscribed Experiments</string>
    <string name="edit_profile_button_text">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trial_use_location">Use Location</string>
    <string name="trial_increment">Increment</string>
    <string name="trial_submit">Submit</string>
    <string name="trial_scan">Scan</string>
    <string name="trial_generate_qr">Generate QR Code</string>
    <string name="trial_assign_barcode">Assign To Barcode</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>