<?xml version="1.0" encoding="utf-8"?>

<!--
This contains common elements across all Trial screens
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/use_location_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trial_use_location"
        app:layout_constraintBottom_toTopOf="@+id/submit_trial_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_trial_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trial_submit"
        app:layout_constraintBottom_toTopOf="@+id/scan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/use_location_switch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trial_generate_qr"
        app:layout_constraintBottom_toTopOf="@+id/generate_qr_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_trial_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generate_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trial_generate_qr"
        app:layout_constraintBottom_toTopOf="@+id/assign_barcode_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/assign_barcode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trial_assign_barcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_qr_button" />
</androidx.constraintlayout.widget.ConstraintLayout>