<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.experimentDetails.ExperimentStatistics">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="169dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/quartile0_text"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/q0_non_owner" />

            <TextView
                android:id="@+id/quartile1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/q1_non_owner" />

            <TextView
                android:id="@+id/quartile2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/q2_non_owner" />

            <TextView
                android:id="@+id/quartile3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:text="@string/q3_non_owner" />

            <TextView
                android:id="@+id/quartile4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:text="@string/q4_non_owner" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/q0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="0.00" />

            <TextView
                android:id="@+id/q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="5dp"
                android:text="0.00" />

            <TextView
                android:id="@+id/q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="5dp"
                android:text="0.00" />

            <TextView
                android:id="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="5dp"
                android:text="0.00" />

            <TextView
                android:id="@+id/q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="0.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/st_dev_text_detail_non_owner_screen_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="75dp"
                android:layout_marginRight="75dp"
                android:text="@string/stdev_non_owner" />

            <TextView
                android:id="@+id/median_text_detail_non_owner_screen_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/median_non_owner" />

            <TextView
                android:id="@+id/mean_text_detail_non_owner_screen_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="5dp"
                android:text="@string/mean_non_owner" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <TextView
                android:id="@+id/stddev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="75dp"
                android:layout_marginRight="75dp"
                android:text="0.98" />

            <TextView
                android:id="@+id/median"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="15dp"
                android:text="1.23" />

            <TextView
                android:id="@+id/mean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="15dp"
                android:text="1.23" />
        </TableRow>
    </TableLayout>

</FrameLayout>